--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>丸子的系统生活</title>
@@ -36,8 +36,20 @@
     
     <!-- External Files -->
     <link rel="stylesheet" href="css/styles.css">
-    <script src="firebase-config.js"></script>
-</head>
+    
+    <!-- Firebase Configuration -->
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyBfmegqNS3818hvlejBTsV3DIiyuL9KoGk",
+            authDomain: "systemwork-6e09a.firebaseapp.com",
+            projectId: "systemwork-6e09a",
+            storageBucket: "systemwork-6e09a.appspot.com",
+            messagingSenderId: "421508436035",
+            appId: "1:421508436035:web:b091bdcd728d8aa2cf84f6",
+            measurementId: "G-YP362VB7FJ"
+        };
+    </script>
+  </head>
 <body class="bg-slate-50 text-gray-700">
 
     <div id="toast-container" class="fixed bottom-5 right-5 z-50"></div>
@@ -207,5 +219,5 @@
             window.app.initializeApp();
         });
     </script>
-</body>
+  </body>
 </html>
