--- a/index.html
+++ b/index.html
@@ -153,6 +153,36 @@
         </main>
     </div>
     
+    <!-- 板块设置模态框 -->
+    <div id="board-settings-modal" class="modal-overlay fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-40 hidden opacity-0">
+        <div class="modal-content glass-pane rounded-xl w-full max-w-md p-8 transform scale-95 opacity-0">
+            <h2 class="text-2xl font-bold text-gray-900 mb-6">板块设置</h2>
+            <form id="board-settings-form">
+                <div class="space-y-6">
+                    <div>
+                        <label for="board-title" class="font-semibold text-gray-700">板块名称</label>
+                        <input type="text" id="board-title" class="w-full mt-2 p-3 bg-white/50 border border-gray-300 rounded-lg focus:outline-none focus:border-orange-400" required>
+                    </div>
+                    <div>
+                        <label for="board-color" class="font-semibold text-gray-700">板块颜色</label>
+                        <div class="grid grid-cols-3 gap-3 mt-2">
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="purple" style="background: linear-gradient(135deg, #ef4444, #f97316);"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="blue" style="background: linear-gradient(135deg, #f97316, #f59e0b);"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="indigo" style="background: linear-gradient(135deg, #f59e0b, #eab308);"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="rose" style="background: linear-gradient(135deg, #f43f5e, #ef4444);"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="amber" style="background: linear-gradient(135deg, #eab308, #f59e0b);"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="gray" style="background: linear-gradient(135deg, #6b7280, #4b5563);"></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex justify-end space-x-4 mt-8">
+                    <button type="button" id="cancel-board-settings" class="px-5 py-2 rounded-lg bg-gray-200 hover:bg-gray-300 font-semibold">取消</button>
+                    <button type="submit" class="px-5 py-2 rounded-lg bg-orange-500 hover:bg-orange-600 text-white font-semibold">保存设置</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <!-- 新建项目模态框 -->
     <div id="project-modal" class="modal-overlay fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-40 hidden opacity-0">
         <div class="modal-content glass-pane rounded-xl w-full max-w-2xl p-8 transform scale-95 opacity-0">
@@ -177,11 +207,6 @@
                         <h3 class="font-semibold text-gray-700 mb-2">任务列表</h3>
                         <div id="modal-tasks-container" class="space-y-3"></div>
                         <button type="button" id="add-modal-task" class="mt-2 text-sm font-semibold text-orange-600 hover:text-orange-800">+ 添加任务</button>
-                    </div>
-                    <div>
-                        <h3 class="font-semibold text-gray-700 mb-2">KPIs (关键绩效指标)</h3>
-                        <div id="modal-kpis-container" class="space-y-3"></div>
-                        <button type="button" id="add-modal-kpi" class="mt-2 text-sm font-semibold text-orange-600 hover:text-orange-800">+ 添加KPI</button>
                     </div>
                     <div>
                         <label for="review-day" class="font-semibold text-gray-700">每周复盘日</label>
