feat: Project Edit Feature Complete
✨ 新功能：项目编辑
- 在项目卡片标题旁添加⚙️编辑图标
- 点击编辑图标打开预填充的项目表单
- 支持修改项目的所有信息：
  * 项目名称
  * 项目周期
  * 任务列表（添加/删除/修改）
  * 任务频率和时间
  * 每周复盘日
- 保留原有的复盘记录不受影响
- 自动重新生成复盘任务（如果修改了复盘日）
- 保存后自动刷新日历和日程清单

技术实现：
- 在 js/projects.js 中添加编辑模式支持
- 实现 loadProjectData() 函数加载现有数据
- 实现 updateExistingProject() 函数更新项目
- 创建和编辑共用同一个表单
- 智能识别和保留项目历史数据

完整的项目生命周期管理能力！

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     <!-- 新建项目模态框 -->
     <div id="project-modal" class="modal-overlay fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-40 hidden opacity-0">
         <div class="modal-content glass-pane rounded-xl w-full max-w-2xl p-8 transform scale-95 opacity-0">
-            <h2 class="text-2xl font-bold text-gray-900 mb-6">创建新项目</h2>
+            <h2 id="project-modal-title" class="text-2xl font-bold text-gray-900 mb-6">创建新项目</h2>
             <form id="project-form">
                 <div class="space-y-6">
                     <div>
@@ -274,7 +274,7 @@
                 </div>
                 <div class="flex justify-end space-x-4 mt-8">
                     <button type="button" id="cancel-project" class="px-5 py-2 rounded-lg bg-gray-200 hover:bg-gray-300 font-semibold">取消</button>
-                    <button type="submit" class="px-5 py-2 rounded-lg bg-orange-500 hover:bg-orange-600 text-white font-semibold">创建项目</button>
+                    <button type="submit" id="submit-project-btn" class="px-5 py-2 rounded-lg bg-orange-500 hover:bg-orange-600 text-white font-semibold">创建项目</button>
                 </div>
             </form>
         </div>
