--- a/index.html
+++ b/index.html
@@ -169,6 +169,29 @@
                 <p class="text-sm text-gray-600 mt-1" id="review-project-period">项目周期</p>
             </div>
             
+            <!-- 本周数据统计 -->
+            <div id="review-weekly-stats" class="mb-6 p-5 bg-white rounded-lg border border-gray-200 shadow-sm">
+                <h3 class="font-semibold text-gray-700 mb-4 flex items-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mr-2"><path d="M3 3v18h18"></path><path d="m19 9-5 5-4-4-3 3"></path></svg>
+                    本周数据概览
+                </h3>
+                <div class="grid grid-cols-2 gap-4 mb-4">
+                    <div class="text-center p-3 bg-green-50 rounded-lg">
+                        <div class="text-3xl font-bold text-green-600" id="review-completion-rate">0%</div>
+                        <div class="text-sm text-gray-600 mt-1">任务完成率</div>
+                    </div>
+                    <div class="text-center p-3 bg-blue-50 rounded-lg">
+                        <div class="text-3xl font-bold text-blue-600">
+                            <span id="review-completed-count">0</span>/<span id="review-total-count">0</span>
+                        </div>
+                        <div class="text-sm text-gray-600 mt-1">已完成/总任务</div>
+                    </div>
+                </div>
+                <div id="review-incomplete-tasks" class="mt-3">
+                    <!-- 未完成任务列表将在这里显示 -->
+                </div>
+            </div>
+            
             <!-- 复盘写作区 -->
             <div class="mb-6">
                 <h3 class="font-semibold text-gray-700 mb-4">✍️ 撰写本次复盘</h3>
