--- a/index.html
+++ b/index.html
@@ -285,7 +285,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="flex justify-end space-x-4 mt-8">
+                
+                <!-- 危险区域 -->
+                <div class="mt-8 pt-6 border-t border-gray-200">
+                    <h4 class="text-sm font-semibold text-red-600 mb-2">⚠️ 危险操作</h4>
+                    <p class="text-xs text-gray-600 mb-3">删除此板块将永久删除其中的所有项目和数据，此操作不可恢复。</p>
+                    <button type="button" id="delete-board-btn" class="px-4 py-2 rounded-lg bg-red-500 hover:bg-red-600 text-white text-sm font-medium">
+                        🗑️ 删除此板块
+                    </button>
+                </div>
+                
+                <div class="flex justify-end space-x-4 mt-6">
                     <button type="button" id="cancel-board-settings" class="px-5 py-2 rounded-lg bg-gray-200 hover:bg-gray-300 font-semibold">取消</button>
                     <button type="submit" class="px-5 py-2 rounded-lg bg-orange-500 hover:bg-orange-600 text-white font-semibold">保存设置</button>
                 </div>
