--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>丸子的系统生活</title>
+    <title>丸</title>
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
