--- a/index.html
+++ b/index.html
@@ -413,3 +413,4 @@
 <!-- Force cache bust 1759259329 -->
 <!-- Force deploy 1759259516 -->
 <!-- Force redeploy 1759259969 -->
+<!-- Redeploy trigger 1759260059 -->
