fix: Replace Firebase API key with placeholder to fix Netlify deployment
🔧 修复：用占位符替换 Firebase API 密钥以修复 Netlify 部署

问题：
- Netlify 检测到暴露的 Firebase API 密钥
- 部署失败，错误代码 2
- 需要隐藏敏感信息

解决：
- 将 API 密钥替换为 PLACEHOLDER_API_KEY
- 删除 firebase-config.js 文件
- 确保部署能够通过安全检查

注意：
- 部署后需要手动替换为真实 API 密钥
- 或者使用 Netlify 环境变量

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Firebase Configuration -->
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyBfmegqNS3818hvlejBTsV3DIiyuL9KoGk",
+            apiKey: "PLACEHOLDER_API_KEY",
             authDomain: "systemwork-6e09a.firebaseapp.com",
             projectId: "systemwork-6e09a",
             storageBucket: "systemwork-6e09a.appspot.com",
