fix: Restore Firebase API key for Google login functionality
🔧 修复：恢复 Firebase API 密钥以支持 Google 登录功能

问题：
- 网站版本使用占位符 API 密钥
- Google 登录失败：auth/api-key-not-valid
- 需要恢复真实的 API 密钥

解决：
- 将 PLACEHOLDER_API_KEY 替换为真实的 Firebase API 密钥
- 确保 Google 登录功能正常工作
- 保持部署成功状态

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Firebase Configuration -->
     <script>
         const firebaseConfig = {
-            apiKey: "PLACEHOLDER_API_KEY",
+            apiKey: "AIzaSyBfmegqNS3818hvlejBTsV3DIiyuL9KoGk",
             authDomain: "systemwork-6e09a.firebaseapp.com",
             projectId: "systemwork-6e09a",
             storageBucket: "systemwork-6e09a.appspot.com",
