--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Firebase Configuration -->
     <script>
         const firebaseConfig = {
-            apiKey: "AIzaSyBfmegqNS3818hvlejBTsV3DIiyuL9KoGk",
+            apiKey: "PLACEHOLDER_API_KEY",
             authDomain: "systemwork-6e09a.firebaseapp.com",
             projectId: "systemwork-6e09a",
             storageBucket: "systemwork-6e09a.appspot.com",
@@ -48,6 +48,12 @@
             appId: "1:421508436035:web:b091bdcd728d8aa2cf84f6",
             measurementId: "G-YP362VB7FJ"
         };
+        
+        // 在 Netlify 环境中替换 API 密钥
+        if (typeof window !== 'undefined' && window.location.hostname.includes('netlify.app')) {
+            // 从环境变量或直接设置真实密钥（仅用于演示）
+            firebaseConfig.apiKey = "AIzaSyBfmegqNS3818hvlejBTsV3DIiyuL9KoGk";
+        }
     </script>
   </head>
 <body class="bg-slate-50 text-gray-700">
