--- a/index.html
+++ b/index.html
@@ -39,20 +39,28 @@
     
     <!-- Firebase Configuration -->
     <script>
+        // Firebase configuration using environment variables
+        // These will be replaced by Netlify at build time
         const firebaseConfig = {
-            apiKey: "PLACEHOLDER_API_KEY",
-            authDomain: "systemwork-6e09a.firebaseapp.com",
-            projectId: "systemwork-6e09a",
-            storageBucket: "systemwork-6e09a.appspot.com",
-            messagingSenderId: "421508436035",
-            appId: "1:421508436035:web:b091bdcd728d8aa2cf84f6",
-            measurementId: "G-YP362VB7FJ"
+            apiKey: "REACT_APP_FIREBASE_API_KEY",
+            authDomain: "REACT_APP_FIREBASE_AUTH_DOMAIN", 
+            projectId: "REACT_APP_FIREBASE_PROJECT_ID",
+            storageBucket: "REACT_APP_FIREBASE_STORAGE_BUCKET",
+            messagingSenderId: "REACT_APP_FIREBASE_MESSAGING_SENDER_ID",
+            appId: "REACT_APP_FIREBASE_APP_ID",
+            measurementId: "REACT_APP_FIREBASE_MEASUREMENT_ID"
         };
         
-        // 在 Netlify 环境中替换 API 密钥
-        if (typeof window !== 'undefined' && window.location.hostname.includes('netlify.app')) {
-            // 从环境变量或直接设置真实密钥（仅用于演示）
-            firebaseConfig.apiKey = "AIzaSyBfmegqNS3818hvlejBTsV3DIiyuL9KoGk";
+        // Validate Firebase configuration
+        function validateFirebaseConfig() {
+            const requiredKeys = ['apiKey', 'authDomain', 'projectId'];
+            for (const key of requiredKeys) {
+                if (!firebaseConfig[key] || firebaseConfig[key].startsWith('REACT_APP_')) {
+                    console.error(`Firebase配置错误: ${key} 未正确设置`);
+                    return false;
+                }
+            }
+            return true;
         }
     </script>
   </head>
