feat: 按板块分组显示日程清单 + 改用彩虹色系
- 日程清单按板块分组显示（红橙黄绿青蓝紫）
- 每个板块显示任务数量
- 颜色选项改为彩虹色系，更容易区分

--- a/index.html
+++ b/index.html
@@ -298,12 +298,13 @@
                     <div>
                         <label for="board-color" class="font-semibold text-gray-700">板块颜色</label>
                         <div class="grid grid-cols-3 gap-3 mt-2">
-                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="purple" style="background: linear-gradient(135deg, #ef4444, #f97316);"></button>
-                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="blue" style="background: linear-gradient(135deg, #f97316, #f59e0b);"></button>
-                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="indigo" style="background: linear-gradient(135deg, #f59e0b, #eab308);"></button>
-                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="rose" style="background: linear-gradient(135deg, #f43f5e, #ef4444);"></button>
-                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="amber" style="background: linear-gradient(135deg, #eab308, #f59e0b);"></button>
-                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="gray" style="background: linear-gradient(135deg, #6b7280, #4b5563);"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="red" style="background: #ef4444;"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="orange" style="background: #f97316;"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="yellow" style="background: #fbbf24;"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="green" style="background: #10b981;"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="cyan" style="background: #06b6d4;"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="blue" style="background: #3b82f6;"></button>
+                            <button type="button" class="color-option p-3 rounded-lg border-2 border-gray-300 hover:border-gray-400" data-color="purple" style="background: #a855f7;"></button>
                         </div>
                     </div>
                 </div>
