--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     
     <!-- External Files -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/home-redesign.css">
     
     <!-- Firebase Configuration -->
     <script>
@@ -144,7 +145,7 @@
                         </div>
                     </header>
                     <section class="mb-10 grid grid-cols-1 lg:grid-cols-3 gap-8">
-                        <div class="lg:col-span-2 glass-pane rounded-xl p-6 glass-pane-hover">
+                        <div class="lg:col-span-2 calendar-card">
                             <div class="flex justify-between items-center mb-4">
                                 <button id="prev-month" class="p-2 rounded-full hover:bg-gray-200">&lt;</button>
                                 <h3 id="month-year" class="text-xl font-semibold text-gray-900"></h3>
@@ -155,7 +156,7 @@
                             </div>
                             <div id="calendar-grid" class="grid grid-cols-7 gap-2 text-center"></div>
                         </div>
-                        <div class="glass-pane rounded-xl p-6 glass-pane-hover">
+                        <div class="agenda-card">
                              <div class="flex justify-between items-center mb-4">
                                 <h3 class="text-xl font-semibold text-gray-900">日程清单</h3>
                                 <button id="add-event-btn" class="text-orange-500 hover:text-orange-700 font-bold text-2xl leading-none" title="添加临时事件">+</button>
